--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 			<div class="right">
 				<h2>Cadieras que estou cursando</h2>
 				<ul>
-					<li>IF 668</li>
-					<li>IF 669</li>
-					<li>IF 670</li>
-					<li>MA 026</li>
+					<li><a href="https://cin.ufpe.br/~if668/">IF 668</a></li>
+					<li><a href="https://cin.ufpe.br/~if669/">IF 669</a></li>
+					<li><a href="https://cin.ufpe.br/~if670/">IF 670</a></li>
+					<li><a href="https://cin.ufpe.br/~ma026/">MA 026</a></li>
 				</ul>
 			</div>
 			<hr>
